# distributed-systems

./: .gitignore
EjercicioFileManager/: CMakeLists.txt  CMakeSettings.json  EjercicioFileManager.h  main_fm.cpp
EjercicioFileManager/EjercicioFileManager/: CMakeLists.txt  Test.cpp  filemanager.cpp  main_fm.cpp
EjercicioFileManager/EjercicioFileManagerDistributed/: CMakeLists.txt  FileManagerImp.cpp  FileManagerImp.h  OperacionesStub.cpp  OperacionesStub.h  Utils.cpp  Utils.h
Ejercicios/: CMakeLists.txt  CMakeSettings.json
Ejercicios/FileManager/: CMakeLists.txt  ClientConnection.h  FileManagerImp.cpp  FileManagerStub.cpp  FileManagerStub.h  MyConnection.cpp  MyConnection.h  Server.cpp  Server.h  main_client.cpp  main_server.cpp
Ejercicios/FileManagerMain/: CMakeLists.txt  FileManagerImp.cpp  FileManagerStub.cpp  FileManagerStub.h  MyConnection.cpp  MyConnection.h  main_client.cpp
Ejercicios/FileManagerMain/dirprueba/: resultado2.txt
Ejercicios/MultMatrix/: CMakeLists.txt  MultMatrixImp.cpp  MultMatrixStub.cpp  MultMatrixStub.h  MyConnection.cpp  MyConnection.h  main_client.cpp
Ejercicios/MultMatrixDistr/: CMakeLists.txt  MultMatrixImp.h  MultMatrixStub.cpp  Server.cpp
Ejercicios/MultMatrixLocal/: CMakeLists.txt  ClientConnection.h  MultMatrixImp.cpp  MultMatrixStub.h  MyConnection.cpp  MyConnection.h
FileManager/: CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  cmake_install.cmake
FileManager/EjercicioFileManager/: EjercicioFileManager  EjercicioFileManager.cpp  Makefile  cmake_install.cmake  main_fm.cpp
FileManager/EjercicioFileManagerDistributed/: CMakeCache.txt  CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  FileManagerImp.cpp  FileManagerImp.h  FileManagerStub.cpp  FileManagerStub.h  Makefile  MyConnection.cpp  MyConnection.h  Server.h  Utils.cpp  Utils.h  client  client.cpp  cmake_install.cmake  main_client.cpp  main_server.cpp  server  server.cpp
FileManager/EjercicioFileManagerDistributed/dirprueba/: resultado.txt  resultado2.txt
Práctica 1/: README.md
Práctica 1/src/: CMakeLists.txt
Práctica 1/src/FileManagerDistr/: CMakeLists.txt  ClientConnection.h  FileManagerStub.cpp  FileManagerStub.h
Práctica 1/src/FileManagerMain/: ClientConnection.cpp  FileManagerStub.cpp  Server.cpp  main_client.cpp
Práctica 1/src/MultMatrixDistr/: main_client.cpp
Práctica 1/src/MultMatrixLocal/: MultMatrixImp.cpp
Práctica 1/src/MultMatrixMain/: MultMatrixStub.cpp  MyConnection.cpp  MyConnection.h
Práctica 2/: README.md
Práctica 2/src/: CMakeLists.txt  Dockerfile  filemanager.yaml  k8s_install.sh  k8s_reset.sh  multmatrix.yaml
Práctica 2/src/FileManager/: Dockerfile  FileManager.h  FileManagerStub.h  Server.h  main_client.cpp  run.sh
Práctica 2/src/FileManagerMain/: Dockerfile  FileManager.cpp  main_client.cpp
Práctica 2/src/MultMatrix/: Dockerfile  main_server.cpp
Práctica 2/src/MultMatrixMain/: MultMatrixStub.cpp  main_client.cpp
Práctica 3/: .gitignore  build.sh  config.py.example  dev_env.ps1  k8_install.sh
Práctica 3/Backend/: Dockerfile  app.py  deployment.yaml  requirements.txt
Práctica 3/Backend/api/v1/: math.py
Práctica 3/Backend/database/: __init__.py
Práctica 3/Backend/database/models/: calculation.py
Práctica 3/Backend/decorators/: authenticate.py
Práctica 3/Backend/src/: .gitignore
Práctica 3/Backend/src/api/v1/: auth.py  math.py
Práctica 3/Backend/src/decorators/: __init__.py  authenticate.py
Práctica 3/Frontend/: deployment.yaml  index.html
Práctica 3/Frontend/src/: index.html
Práctica 3/Services/: db_service.yaml
Práctica 3/api/v1/: __init__.py  auth.py  math.py
Práctica 3/database/models/: __init__.py  calculation.py  user.py
Práctica 3/decorators/: authenticate.py  validation.py
ej0/: CMakeLists.txt  cliente.cpp  operaciones.cpp  operaciones.h  operaciones_imp.cpp  operaciones_imp.h  operaciones_stub.cpp  operaciones_stub.h  server.cpp
multMatrix/: CMakeLists.txt
src/FileManagerDistr/: FileManagerImp.cpp  MyConnection.h  main_client.cpp
src/FileManagerMain/: FileManagerImp.cpp  FileManagerImp.h  MyConnection.cpp
src/FileManagerMain/dirprueba/: resultado.txt
src/MultMatrixDistr/: ClientConnection.h  MultMatrixImp.h  MultMatrixStub.cpp  Server.cpp  multmatrix.cpp
src/MultMatrixLocal/: CMakeLists.txt
src/MultMatrixMain/: CMakeLists.txt  MultMatrixStub.h  main_client.cpp
